--- a/skysub.tex
+++ b/skysub.tex
@@ -746,6 +746,9 @@ Ultimately we find that the \emph{shape} of the background on the disk can be kn
 By comparison, the typical amplitude of median sky images is $\sim 0.6\%$ of both the $J$ and $K_s$ background levels.
 Note that it is impossible for a NIR observing program with large ST nods to subtract background shapes better than the 0.3\% we find here: the shape of the background at the target will always be distinct from background shapes measured at designated sky fields.
 
+To summarize, we have spent considerable effort demonstrating that \texttt{NIGHT} sky flats are appropriate for our application, and the impact of thermal background and scattered light on flat fields and zero-points are negligible compared to background uncertainties due to NIR sky glow.
+In the following sections we assemble NIR mosaics of M31 using images processed according to the preceding sections, using \texttt{NIGHT} sky flats.
+
 \section{Sky Offset Optimization}
 \label{sec:scalar}
 
@@ -758,7 +761,7 @@ Note that it is impossible for a NIR observing program with large ST nods to sub
 % + skysubpub/raw_mosaic.py
 \end{figure}
 
-In \Fig{raw_mosaics}, we plot mosaics (assembled using \sw{Swarp}) from \androids\ frames processed with the pipeline discussed in \Sec{reduction}--\Sec{photocal} and adopting the \texttt{NIGHT} sky flat prescription.
+In \Fig{raw_mosaics}, we plot mosaics (assembled using \sw{Swarp}) from \androids\ frames processed with the pipeline discussed in \Sec{reduction}--\Sec{photocal} and adopting the \texttt{NIGHT} sky flat prescription favored in \Sec{shapeconclusions}.
 Although these image preparations can constrain the surface brightness \emph{shape} of a WIRCam frame by $\lesssim 0.3\%$ of the sky level, \Fig{raw_mosaics} demonstrates that the true level of the background on M31's disk is lost by the temporal and spatial of sky glow between disk and sky field observations.
 This results in the distinct field-to-field surface brightness discontinuities seen in \Fig{raw_mosaics}.
 However, we can use the constraint all overlapping pairs of images composed in our mosaic should have equal surface brightness in their intersections.
